# Fulfilment-Checker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run-dev.bat  run.bat  stop.bat
.github/workflows/: build-apk.yml  publish-release.yml
app/: auth.py  barcode_catalog.py  cloud_oauth_defaults.py  cloud_sync.py  components.py  database.py  history_export.py  item_grouping.py  main_app.py  metadata.py  paths.py  pdf_parser.py  pick_orders.py  picker_helper.py  theme.py  update_check.py  verification.py
app/pages/: __init__.py  history.py  home.py  new_scan.py  settings.py
data/: BarcodeMasterList.xlsx  admins.json.example  cloud_credentials.json.example  config.json.example
scripts/: build_apk.ps1  check_release_version.py  patch_android_url_queries.py  prepare_release.ps1  run_once.ps1  stop_app.ps1
